Changelog
=========

0.8 (unreleased)
----------------

Nothing yet.

0.7 (2014-09-23)
----------------

- Spell email as 'E-Mail' in German.
  [href]

0.6 (2014-02-27)
----------------

- Extract text out html notes.
  [href]

0.5 (2014-02-05)
----------------

- Adds seantis.plonetools integration.
  [href]

0.4
---

- Fixes missing README.md

0.3
---

- First PyPI Release

0.2
---
- Requires Plone 4.1+

0.1
---

- Initial release